- WebRTC updated from r4332 to r6818
- Qt updated to 6.9.0beta3 on macOS and Windows
- Fixed gender changed from female to male when migrating to 5.17 release
- Fixed sound events disabled when migrating to 5.17 release
- Fixed language not set at first start
- Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled
Android Client
- IP Address and status message is now shown in User Properties dialog
- Ability to select/deselect user for move to other channel
- Minimum supported Android v8.1 (Oreo)
- WebRTC updated from r4332 to r6818
iOS Client
- WebRTC updated from r4332 to r6818
Server
-

Version 5.17, 2024/08/15
Default Qt Client
- "Connect to a Server" and "User Accounts" dialog simplified with multiple sub dialogs
- Redesigned "Sound Events" and "Shortcuts" tabs in "Preferences" dialog
- Table view instead of tree view in "Online Users", "User Accounts", "Banned Users", "Server List", "File List", "Server Properties" and "Preferences" dialogs
- Use Qt checkable flag in user rights list of "User Accounts" dialog to allow screenreader to see if an item is checked
- Fixed state of checkable items in "Preferences", "User Account", "Server properties" dialogs not announce by Voice Over on MacOS
- Fixed labels of edit fields in "Custom Video Format" dialog
- Replaced readonly edit fields by labels in "User Info" and "Server Statistics" dialogs
- Radio buttons for Gender, Sound System and Status mode changed to combo boxes
- Context menu to move banned/unbanned users to banned/unbanned list in "Banned Users" dialog
- "Move Users" dialog from "Users" -> "Advanced" menu item
- "Check for Update" in "Help" menu
- Playback mode "Default" for sound events now also use TeamTalk selected sound device
- Menu to insert MOTD variables in "Server Properties" dialog
- Ability to "join last joined channel" for each server
- Ability to leave current channel from everywhere in main window
- Ability to customize some TTS and status bar messages